# httpea

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml  release.yml
http_kit/: http_error.py
httpea/: __init__.py  http_headers.py  http_parsed_body.py  http_request.py
httpkit/: __init__.py  http_cookies.py  http_message.py  http_multipart_message_parser.py  http_response.py  router.py
tests/: test_http_cookies.py  test_http_headers.py  test_http_message.py  test_http_query_string.py  test_http_request.py  test_http_response.py  test_http_status.py  test_router.py
tests/fixtures/: body_fixtures.py
